# ai-1

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  agent_core.py  executor.py  memory.py  planner.py
agent/tools/: __init__.py  calculator_tool.py  search_tool.py  weather_tool.py
ai_engineering_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: settings.py
data/kd_crm_docs/: 01_产品功能介绍.txt  02_销售跟进规范.txt  03_客户服务手册.txt  2023CRM报价需求（赵青青）.docx  2025年销售系统需求文档（刘新颖）.docx  2026年销售系统.docx  2026日常办公系统需求文档.docx
data/sample_docs/: ai_intro.txt  rag_guide.txt
integration/: __init__.py  full_pipeline.py
prompts/: __init__.py  advanced.py  basics.py  debug_tools.py  templates.py
prompts/templates/: system_prompts.yaml  task_prompts.yaml
rag/: __init__.py  document_loader.py  embedding.py  generator.py  pipeline.py  reranker.py  retriever.py  vector_store.py
ui/: app.py
ui/components/: common.py
ui/pages/: 1_Prompt实验室.py  2_RAG实验室.py  3_Agent实验室.py  4_完整项目.py  5_KD-CRM文档检索.py
