[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engineering-lab"
version = "0.1.0"
description = "AI 工程化实验室 - Prompt / RAG / Agent 学习项目"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "config*", "integration*", "prompts*", "rag*", "tests*", "ui*"]
